Add storage for TransportBookingManager